# 3dont

./: .envrc  .gitignore  CMakeLists.txt  README.md  flake.nix  qlever.patch  rocksdb_wrapper_optimization.patch
docs/: DEVELOPMENT_GUIDE.md  USER_GUIDE.md  linked_to_relational_view_virtuoso.sql  video_queries.txt
nix/: default.nix  fsst.nix  qendpoint.nix  qlever.nix  qlever.patch  spatialjoin.nix
nix/py/: default.nix  owlready2.nix  oxrdflib.nix  qlever-control.nix  requests-sse.nix
threedont/: CMakeLists.txt  __main__.py
threedont/app/: controller.py  db.py  exceptions.py  queries.py  query_result.py  surface_value.py  viewer.py
threedont/app/state/: __init__.py  abstract_config.py  app_state.py  config.py  project.py
threedont/app/storage/: __init__.py  abstract_storage.py  oxigraph_rdflib_storage.py  oxigraph_storage.py  qendpoint_storage.py  qlever_storage.py  query_result.py  sparql_rdflib_storage.py  sparqlwrapper_storage.py  storage_factory.py  turtle_result_parser.py
threedont/app/storage/qlever/: CMakeLists.txt  CsvStringParser.cpp  CsvStringParser.h  PyQlever.cpp  PyQlever.h  PyQleverQueryResult.cpp  module.cpp
threedont/app/storage/query_handlers/: __init__.py  oxigraph_query.py  qendpoint_query.py  query_result.py  rdf_query.py  sparqlwrapper_query.py
threedont/assets/: 3DOntCore.rdf
threedont/gui/: CMakeLists.txt  controller_wrapper.cpp  controller_wrapper.h  gui_wrapper.cpp  gui_wrapper.h  main_layout.cpp  main_layout.h  main_layout.ui
threedont/gui/dialogs/: class_query_lod_dialog.cpp  class_query_lod_dialog.h  create_project_dialog.cpp  create_project_dialog.h  properties_mapping_selection.h
threedont/gui/points_tree_view/: graph_tree_item.cpp  graph_tree_item.h  graph_tree_model.cpp  graph_tree_model.h
threedont/gui/viewer/: alternative_frame_buffer.h  background.h  floor_grid.h  look_at.h  opengl_funcs.h  point_cloud.h  selection_box.h  text.h  viewer.cpp  viewer.h
threedont/gui/viewer/camera/: camera.cpp  camera.h  camera_dolly.cpp  camera_dolly.h  qt_camera.cpp  qt_camera.h  splines.cpp  splines.h
threedont/gui/viewer/components/: background.cpp  background.h  floor_grid.cpp  floor_grid.h  look_at.cpp  look_at.h  point_cloud.cpp  point_cloud.h  selection_box.cpp  selection_box.h  text.cpp  text.h
threedont/gui/viewer/data/: octree.cpp  octree.h  point_attributes.cpp  point_attributes.h
threedont/gui/viewer/utils/: alternative_frame_buffer.cpp  alternative_frame_buffer.h  comm_funcs.cpp  comm_funcs.h  opengl_funcs.cpp  opengl_funcs.h  timer.h
threedont/gui/widgets/: scale_legend.cpp  scale_legend.h
threedont/nl_2_sparql/: __init__.py  lib.py
threedont/sensor_manager/: RDF_functions.py  Sensor_Management_Functions.py  __init__.py  aws_iot_interface.py  classes.py  sensor_management_functions.py
